src/pygerber/gerberx3/parser/pyparsing/grammar.py
"""`pygerber.gerberx3.parser.pyparsing.grammar` module contains the Gerber X3 grammar
implemented using the pyparsing library.
"""

from __future__ import annotations

from enum import IntFlag
from typing import Callable, ClassVar, List, Literal, Type, TypeVar, cast

import pyparsing as pp
from pydantic import ValidationError

from pygerber.gerberx3.ast.nodes.aperture.AB_close import ABclose
from pygerber.gerberx3.ast.nodes.aperture.AB_open import ABopen
from pygerber.gerberx3.ast.nodes.aperture.ADC import ADC
from pygerber.gerberx3.ast.nodes.aperture.ADmacro import ADmacro
from pygerber.gerberx3.ast.nodes.aperture.ADO import ADO
from pygerber.gerberx3.ast.nodes.aperture.ADP import ADP
from pygerber.gerberx3.ast.nodes.aperture.ADR import ADR
from pygerber.gerberx3.ast.nodes.aperture.AM_close import AMclose
from pygerber.gerberx3.ast.nodes.aperture.AM_open import AMopen
from pygerber.gerberx3.ast.nodes.aperture.SR_open import SRopen
from pygerber.gerberx3.ast.nodes.attribute.TA import (
    AperFunction,
    TA_AperFunction,
    TA_DrillTolerance,
    TA_FlashText,
    TA_UserName,
)
from pygerber.gerberx3.ast.nodes.attribute.TD import TD
from pygerber.gerberx3.ast.nodes.attribute.TF import (
    TF_MD5,
    TF_CreationDate,
    TF_FileFunction,
    TF_FilePolarity,
    TF_GenerationSoftware,
    TF_Part,
    TF_ProjectId,
    TF_SameCoordinates,
    TF_UserName,
)
from pygerber.gerberx3.ast.nodes.attribute.TO import (
    TO_C,
    TO_CMNP,
    TO_N,
    TO_P,
    TO_CFtp,
    TO_CHgt,
    TO_CLbD,
    TO_CLbN,
    TO_CMfr,
    TO_CMnt,
    TO_CPgD,
    TO_CPgN,
    TO_CRot,
    TO_CSup,
    TO_CVal,
    TO_UserName,
)
from pygerber.gerberx3.ast.nodes.base import Node
from pygerber.gerberx3.ast.nodes.d_codes.D01 import D01
from pygerber.gerberx3.ast.nodes.d_codes.D02 import D02
from pygerber.gerberx3.ast.nodes.d_codes.D03 import D03
from pygerber.gerberx3.ast.nodes.d_codes.Dnn import Dnn
from pygerber.gerberx3.ast.nodes.file import File
from pygerber.gerberx3.ast.nodes.g_codes.G01 import G01
from pygerber.gerberx3.ast.nodes.g_codes.G02 import G02
from pygerber.gerberx3.ast.nodes.g_codes.G03 import G03
from pygerber.gerberx3.ast.nodes.g_codes.G04 import G04
from pygerber.gerberx3.ast.nodes.g_codes.G36 import G36
from pygerber.gerberx3.ast.nodes.g_codes.G37 import G37
from pygerber.gerberx3.ast.nodes.g_codes.G54 import G54
from pygerber.gerberx3.ast.nodes.g_codes.G55 import G55
from pygerber.gerberx3.ast.nodes.g_codes.G70 import G70
from pygerber.gerberx3.ast.nodes.g_codes.G71 import G71
from pygerber.gerberx3.ast.nodes.g_codes.G74 import G74
from pygerber.gerberx3.ast.nodes.g_codes.G75 import G75
from pygerber.gerberx3.ast.nodes.g_codes.G90 import G90
from pygerber.gerberx3.ast.nodes.g_codes.G91 import G91
from pygerber.gerberx3.ast.nodes.m_codes.M00 import M00
from pygerber.gerberx3.ast.nodes.m_codes.M01 import M01
from pygerber.gerberx3.ast.nodes.m_codes.M02 import M02
from pygerber.gerberx3.ast.nodes.math.assignment import Assignment
from pygerber.gerberx3.ast.nodes.math.constant import Constant
from pygerber.gerberx3.ast.nodes.math.expression import Expression
from pygerber.gerberx3.ast.nodes.math.operators.binary.add import Add
from pygerber.gerberx3.ast.nodes.math.operators.binary.div import Div
from pygerber.gerberx3.ast.nodes.math.operators.binary.mul import Mul
from pygerber.gerberx3.ast.nodes.math.operators.binary.sub import Sub
from pygerber.gerberx3.ast.nodes.math.operators.unary.neg import Neg
from pygerber.gerberx3.ast.nodes.math.operators.unary.pos import Pos
from pygerber.gerberx3.ast.nodes.math.point import Point
from pygerber.gerberx3.ast.nodes.math.variable import Variable
from pygerber.gerberx3.ast.nodes.other.command_end import CommandEnd
from pygerber.gerberx3.ast.nodes.other.coordinate import (
    CoordinateI,
    CoordinateJ,
    CoordinateX,
    CoordinateY,
)
from pygerber.gerberx3.ast.nodes.other.extended_command_close import (
    ExtendedCommandClose,
)
from pygerber.gerberx3.ast.nodes.other.extended_command_open import ExtendedCommandOpen
from pygerber.gerberx3.ast.nodes.primitives.code_0 import Code0
from pygerber.gerberx3.ast.nodes.primitives.code_1 import Code1
from pygerber.gerberx3.ast.nodes.primitives.code_2 import Code2
from pygerber.gerberx3.ast.nodes.primitives.code_4 import Code4
from pygerber.gerberx3.ast.nodes.primitives.code_5 import Code5
from pygerber.gerberx3.ast.nodes.primitives.code_6 import Code6
from pygerber.gerberx3.ast.nodes.primitives.code_7 import Code7
from pygerber.gerberx3.ast.nodes.primitives.code_20 import Code20
from pygerber.gerberx3.ast.nodes.primitives.code_21 import Code21
from pygerber.gerberx3.ast.nodes.primitives.code_22 import Code22
from pygerber.gerberx3.ast.nodes.properties.FS import FS
from pygerber.gerberx3.ast.nodes.properties.IP import IP
from pygerber.gerberx3.ast.nodes.properties.MO import MO

T = TypeVar("T", bound=Node)


class Optimization(IntFlag):
    """Namespace class holding optimization level constants."""

    DISCARD_COMMAND_BOUNDARIES = 0b0001
    DISCARD_COMMENTS = 0b0010
    DISCARD_ATTRIBUTES = 0b0100


class Grammar:
    """Internal representation of the Gerber X3 grammar."""

    DEFAULT: ClassVar[pp.ParserElement]

    def __init__(
        self,
        ast_node_class_overrides: dict[str, Type[Node]],
        *,
        enable_packrat: bool = True,
        enable_debug: bool = False,
        optimization: int = 1,
    ) -> None:
        self.ast_node_class_overrides = ast_node_class_overrides
        self.enable_packrat = enable_packrat
        self.enable_debug = enable_debug
        self.optimization = optimization

    def build(self) -> pp.ParserElement:
        """Build the grammar."""

        def _(s: str, loc: int, tokens: pp.ParseResults) -> File:
            return self.get_cls(File)(source=s, location=loc, commands=tokens.as_list())

        root = (
            pp.OneOrMore(
                pp.MatchFirst(
                    [
                        self.aperture(),
                        self.attribute(),
                        self.g_codes(),
                        self.m_codes(),
                        self.d_codes(),
                        self.properties(),
                        self.command_end,
                    ]
                )
            )
            .set_results_name("root_node")
            .set_parse_action(_)
        )

        if self.enable_packrat:
            root.enable_packrat()

        if self.enable_debug:
            root.set_debug()

        return root

    def get_cls(self, node_cls: Type[T]) -> Type[T]:
        """Get the class of the node."""
        return self.ast_node_class_overrides.get(node_cls.__qualname__, node_cls)  # type: ignore[return-value]

    @pp.cached_property
    def string(self) -> pp.ParserElement:
        """Create a parser element capable of parsing strings."""
        return pp.CharsNotIn("%*").set_results_name("string")

    @pp.cached_property
    def comma(self) -> pp.ParserElement:
        """Create a parser element capable of parsing commas."""
        return pp.Suppress(pp.Literal(",").set_name(","))

    @pp.cached_property
    def name(self) -> pp.ParserElement:
        """Create a parser element capable of parsing names."""
        return pp.Regex(r"[._a-zA-Z$][._a-zA-Z0-9]*/").set_results_name("name")

    @pp.cached_property
    def user_name(self) -> pp.ParserElement:
        """Create a parser element capable of parsing user attribute names."""
        return pp.Regex(r"[_a-zA-Z$][._a-zA-Z0-9]*").set_results_name("user_name")

    @pp.cached_property
    def field(self) -> pp.ParserElement:
        """Create a parser element capable of parsing user attribute names."""
        return pp.Regex(r"[^%*,]*").set_results_name("field")

    @pp.cached_property
    def double(self) -> pp.ParserElement:
        """Create a parser element capable of parsing doubles."""
        return pp.Regex(r"[+-]?(([0-9]+(\.[0-9]+)?)|(\.[0-9]+))").set_results_name(
            "double"
        )

    @pp.cached_property
    def integer(self) -> pp.ParserElement:
        """Create a parser element capable of parsing integers."""
        return pp.Regex(r"[+-]?[0-9]+").set_results_name("integer")

    @pp.cached_property
    def aperture_identifier(self) -> pp.ParserElement:
        """Create a parser element capable of parsing aperture identifiers."""
        return pp.Regex(r"D[0]*[1-9][0-9]+").set_results_name("aperture_identifier")

    def make_unpack_callback(
        self, node_type: Type[Node]
    ) -> Callable[[str, int, pp.ParseResults], Node]:
        """Create a callback for unpacking the results of the parser."""

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(node_type)(source=s, location=loc, **tokens.as_dict())

        return _

    #  █████  ██████  ███████ ██████  ████████ ██    ██ ██████  ███████
    # ██   ██ ██   ██ ██      ██   ██    ██    ██    ██ ██   ██ ██
    # ███████ ██████  █████   ██████     ██    ██    ██ ██████  █████
    # ██   ██ ██      ██      ██   ██    ██    ██    ██ ██   ██ ██
    # ██   ██ ██      ███████ ██   ██    ██     ██████  ██   ██ ███████

    def aperture(self) -> pp.ParserElement:
        """Create a parser element capable of parsing apertures."""
        return pp.MatchFirst(
            [
                self.aperture_block(),
                self.macro(),
                self.step_repeat(),
                self.add_aperture(),
            ]
        )

    def aperture_block(self) -> pp.ParserElement:
        """Create a parser element capable of parsing aperture blocks."""
        return pp.MatchFirst(
            [
                self.ab_open,
                self.ab_close,
            ]
        )

    @pp.cached_property
    def ab_open(self) -> pp.ParserElement:
        """Create a parser element capable of parsing AB-open."""

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(ABopen)(source=s, location=loc, **tokens.as_dict())

        return (
            self.extended_command_open
            + (pp.Literal("AB") + self.aperture_identifier)
            .set_name("ABopen")
            .set_parse_action(_)
            + self.command_end
            + self.extended_command_close
        )

    @pp.cached_property
    def ab_close(self) -> pp.ParserElement:
        """Create a parser element capable of parsing AB-close."""

        def _(s: str, loc: int, _tokens: pp.ParseResults) -> Node:
            return self.get_cls(ABclose)(source=s, location=loc)

        return (
            self.extended_command_open
            + pp.Literal("AB").set_name("ABclose").set_parse_action(_)
            + self.command_end
            + self.extended_command_close
        )

    def macro(self) -> pp.ParserElement:
        """Create a parser element capable of parsing macros."""
        return (
            self.extended_command_open
            + self.am_open
            + self.command_end
            + self.primitives
            + self.am_close
            + self.extended_command_close
        )

    @pp.cached_property
    def am_open(self) -> pp.ParserElement:
        """Create a parser element capable of parsing AM-open."""

        def _am_open(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(AMopen)(source=s, location=loc, **tokens.as_dict())

        return (
            (pp.Literal("AM") + self.name).set_name("AMopen").set_parse_action(_am_open)
        )

    @pp.cached_property
    def am_close(self) -> pp.ParserElement:
        """Create a parser element capable of parsing AM-close."""

        def _am_close(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(AMclose)(source=s, location=loc, **tokens.as_dict())

        return pp.Literal("").set_name("AM_close").set_parse_action(_am_close)

    def step_repeat(self) -> pp.ParserElement:
        """Create a parser element capable of parsing step repeats."""
        return pp.MatchFirst(
            [
                self.sr_open,
                self.sr_close,
            ]
        )

    @pp.cached_property
    def sr_open(self) -> pp.ParserElement:
        """Create a parser element capable of parsing SR-open."""

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(SRopen)(source=s, location=loc, **tokens.as_dict())

        return (
            self.extended_command_open
            + (
                (
                    pp.Literal("SR")
                    + pp.Opt(pp.Literal("X") + self.double.set_results_name("x"))
                    + pp.Opt(pp.Literal("Y") + self.double.set_results_name("y"))
                    + pp.Opt(pp.Literal("I") + self.double.set_results_name("i"))
                    + pp.Opt(pp.Literal("J") + self.double.set_results_name("j"))
                )
                .set_name("SRopen")
                .set_parse_action(_)
            )
            + self.command_end
            + self.extended_command_close
        )

    @pp.cached_property
    def sr_close(self) -> pp.ParserElement:
        """Create a parser element capable of parsing SR-close."""

        def _(s: str, loc: int, _tokens: pp.ParseResults) -> Node:
            return self.get_cls(ABclose)(source=s, location=loc)

        return (
            self.extended_command_open
            + pp.Literal("SR").set_name("SRclose").set_parse_action(_)
            + self.command_end
            + self.extended_command_close
        )

    def add_aperture(self) -> pp.ParserElement:
        """Create a parser element capable of parsing add-aperture commands."""
        return (
            self.extended_command_open
            + pp.Suppress(pp.Literal("AD"))
            + pp.MatchFirst(
                [
                    self.add_aperture_circle(),
                    self.add_aperture_rectangle("R", ADR),
                    self.add_aperture_rectangle("O", ADO),
                    self.add_aperture_polygon(),
                    self.add_aperture_macro(),
                ]
            )
            + self.command_end
            + self.extended_command_close
        )

    def add_aperture_circle(self) -> pp.ParserElement:
        """Create a parser element capable of parsing add-aperture-circle commands."""

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(ADC)(source=s, location=loc, **tokens.as_dict())

        return (
            (
                self.aperture_identifier
                + pp.Literal("C,")
                + self.double.set_results_name("diameter")
                + pp.Opt(self._x + self.double.set_results_name("hole_diameter"))
            )
            .set_name("ADC")
            .set_parse_action(_)
        )

    def add_aperture_rectangle(
        self, symbol: Literal["R", "O"], cls: Type[Node]
    ) -> pp.ParserElement:
        """Create a parser element capable of parsing add-aperture-rectangle
        commands.
        """

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(cls)(source=s, location=loc, **tokens.as_dict())

        return (
            (
                self.aperture_identifier
                + pp.Literal(f"{symbol},")
                + self.double.set_results_name("width")
                + self._x
                + self.double.set_results_name("height")
                + pp.Opt(self._x + self.double.set_results_name("hole_diameter"))
            )
            .set_name("ADC")
            .set_parse_action(_)
        )

    def add_aperture_polygon(self) -> pp.ParserElement:
        """Create a parser element capable of parsing add-aperture-polygon
        commands.
        """

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(ADP)(source=s, location=loc, **tokens.as_dict())

        return (
            (
                self.aperture_identifier
                + pp.Literal("P,")
                + self.double.set_results_name("outer_diameter")
                + self._x
                + self.double.set_results_name("vertices")
                + pp.Opt(self._x + self.double.set_results_name("rotation"))
                + pp.Opt(self._x + self.double.set_results_name("hole_diameter"))
            )
            .set_name("ADC")
            .set_parse_action(_)
        )

    def add_aperture_macro(self) -> pp.ParserElement:
        """Create a parser element capable of parsing add-aperture-polygon
        commands.
        """

        def _(s: str, loc: int, tokens: pp.ParseResults) -> Node:
            return self.get_cls(ADmacro)(source=s, location=loc, **tokens.as_dict())

        param = self.double.set_results_name("params", list_all_matches=True)

        return (
            (
                self.aperture_identifier
                + self.name.set_results_name("name")
                + pp.Opt(self.comma + param + pp.ZeroOrMore(self._x + param))
            )
            .set_name("ADC")
            .set_parse_action(_)
        )

    @pp.cached_property
    def _x(self) -> pp.ParserElement:
        return pp.Suppress(pp.Literal("X")).set_name("X")

    #  █████  ████████ ████████ ██████  ██ ██████  ██    ██ ████████ ███████
    # ██   ██    ██       ██    ██   ██ ██ ██   ██ ██    ██    ██    ██
    # ███████    ██       ██    ██████  ██ ██████  ██    ██    ██    █████
    # ██   ██    ██       ██    ██   ██ ██ ██   ██ ██    ██    ██    ██
    # ██   ██    ██       ██    ██   ██ ██ ██████   ██████     ██    ███████

    def attribute(self) -> pp.ParserElement:
        """Create a parser element capable of parsing attributes."""
        return pp.MatchFirst(
            [
                self.ta(),
                self.td(),
                self.tf(),
                self.to(),
            ]
        )

    def ta(self) -> pp.ParserElement:
        """Create a parser element capable of parsing TA attributes."""
        return (
            self.extended_command_open
            + pp.MatchFirst(
                [
                    self._ta_user_name,
                    self._ta_aper_function,
                    self._ta_drill_tolerance,
                    self._ta_flash_text,
                ]
            )
            + self.command_end
            + self.extended_command_close
        )

    @pp.cached_property
    def _ta_user_name(self) -> pp.ParserElement:
        return (
            (
                self._ta
                + self.user_name
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TA<UserName>")
            .set_parse_action(self.make_unpack_callback(TA_UserName))
        )

    @pp.cached_property
    def _ta_aper_function(self) -> pp.ParserElement:
        return (
            (
                self._ta
                + pp.Literal(".AperFunction")
                + pp.Optional(
                    self.comma
                    + pp.one_of([v.value for v in AperFunction]).set_results_name(
                        "function"
                    )
                )
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TA.AperFunction")
            .set_parse_action(self.make_unpack_callback(TA_AperFunction))
        )

    @pp.cached_property
    def _ta_drill_tolerance(self) -> pp.ParserElement:
        return (
            (
                self._ta
                + pp.Literal(".DrillTolerance")
                + pp.Optional(
                    self.comma
                    + self.double.set_results_name("plus_tolerance")
                    + pp.Optional(
                        self.comma + self.double.set_results_name("minus_tolerance")
                    )
                )
            )
            .set_name("TA.DrillTolerance")
            .set_parse_action(self.make_unpack_callback(TA_DrillTolerance))
        )

    @pp.cached_property
    def _ta_flash_text(self) -> pp.ParserElement:
        return (
            (
                self._ta
                + pp.Literal(".FlashText")
                + self.comma
                + self.field.set_results_name("string")
                + self.comma
                + pp.one_of(list("BC")).set_results_name("mode")
                + self.comma
                + pp.Opt(pp.one_of(list("RM")).set_results_name("mirroring"))
                + self.comma
                + pp.Opt(self.field.set_results_name("font"))
                + self.comma
                + pp.Opt(self.field.set_results_name("size"))
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("comments", list_all_matches=True)
                )
            )
            .set_name("TA.FlashText")
            .set_parse_action(self.make_unpack_callback(TA_FlashText))
        )

    @pp.cached_property
    def _ta(self) -> pp.ParserElement:
        return pp.Literal("TA")

    def td(self) -> pp.ParserElement:
        """Create a parser element capable of parsing TD attributes."""
        return (
            self.extended_command_open
            + (
                (pp.Literal("TD") + pp.Opt(self.string.set_results_name("name")))
                .set_name("TD")
                .set_parse_action(self.make_unpack_callback(TD))
            )
            + self.command_end
            + self.extended_command_close
        )

    def tf(self) -> pp.ParserElement:
        """Create a parser element capable of parsing TF attributes."""
        return (
            self.extended_command_open
            + pp.MatchFirst(
                [
                    self._tf_user_name,
                    self._tf_part,
                    self._tf_file_function,
                    self._tf_file_polarity,
                    self._tf_same_coordinates,
                    self._tf_creation_date,
                    self._tf_generation_software,
                    self._tf_project_id,
                    self._tf_md5,
                ]
            )
            + self.command_end
            + self.extended_command_close
        )

    @pp.cached_property
    def _tf_user_name(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + self.user_name
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TF<UserName>")
            .set_parse_action(self.make_unpack_callback(TF_UserName))
        )

    @pp.cached_property
    def _tf_part(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".Part")
                + self.comma
                + self.field.set_results_name("part")
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TF.Part")
            .set_parse_action(self.make_unpack_callback(TF_Part))
        )

    @pp.cached_property
    def _tf_file_function(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".FileFunction")
                + self.comma
                + self.field.set_results_name("file_function")
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TF.FileFunction")
            .set_parse_action(self.make_unpack_callback(TF_FileFunction))
        )

    @pp.cached_property
    def _tf_file_polarity(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".FilePolarity")
                + self.comma
                + self.field.set_results_name("polarity")
            )
            .set_name("TF.FilePolarity")
            .set_parse_action(self.make_unpack_callback(TF_FilePolarity))
        )

    @pp.cached_property
    def _tf_same_coordinates(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".SameCoordinates")
                + pp.Opt(self.comma + self.field.set_results_name("identifier"))
            )
            .set_name("TF.SameCoordinates")
            .set_parse_action(self.make_unpack_callback(TF_SameCoordinates))
        )

    @pp.cached_property
    def _tf_creation_date(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".CreationDate")
                + self.comma
                + self.field.set_results_name("creation_date")
            )
            .set_name("TF.CreationDate")
            .set_parse_action(self.make_unpack_callback(TF_CreationDate))
        )

    @pp.cached_property
    def _tf_generation_software(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".GenerationSoftware")
                + pp.Opt(
                    self.comma
                    + self.field.set_results_name("vendor")
                    + pp.Opt(
                        self.comma
                        + self.field.set_results_name("application")
                        + pp.Opt(self.comma + self.field.set_results_name("version"))
                    )
                )
            )
            .set_name("TF.GenerationSoftware")
            .set_parse_action(self.make_unpack_callback(TF_GenerationSoftware))
        )

    @pp.cached_property
    def _tf_project_id(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".ProjectId")
                + pp.Opt(
                    self.comma
                    + self.field.set_results_name("name")
                    + pp.Opt(
                        self.comma
                        + self.field.set_results_name("guid")
                        + pp.Opt(self.comma + self.field.set_results_name("revision"))
                    )
                )
            )
            .set_name("TF.ProjectId")
            .set_parse_action(self.make_unpack_callback(TF_ProjectId))
        )

    @pp.cached_property
    def _tf_md5(self) -> pp.ParserElement:
        return (
            (
                self._tf
                + pp.CaselessLiteral(".MD5")
                + self.comma
                + self.field.set_results_name("md5")
            )
            .set_name("TF.MD5")
            .set_parse_action(self.make_unpack_callback(TF_MD5))
        )

    @pp.cached_property
    def _tf(self) -> pp.ParserElement:
        return pp.Literal("TF")

    def to(self) -> pp.ParserElement:
        """Create a parser element capable of parsing TO attributes."""
        return (
            self.extended_command_open
            + pp.MatchFirst(
                [
                    self._to_user_name,
                    self._to_n,
                    self._to_p,
                    self._to_c,
                    self._to_crot,
                    self._to_cmfr,
                    self._to_cmpn,
                    self._to_cval,
                    self._to_cmnt,
                    self._to_cftp,
                    self._to_cpgn,
                    self._to_cpgd,
                    self._to_chgt,
                    self._to_clbn,
                    self._to_clbd,
                    self._to_csup,
                ]
            )
            + self.command_end
            + self.extended_command_close
        )

    @pp.cached_property
    def _to_user_name(self) -> pp.ParserElement:
        return (
            (
                self._to
                + self.user_name
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("fields", list_all_matches=True)
                )
            )
            .set_name("TO<UserName>")
            .set_parse_action(self.make_unpack_callback(TO_UserName))
        )

    @pp.cached_property
    def _to_n(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".N")
                + pp.ZeroOrMore(
                    self.comma
                    + self.field.set_results_name("net_names", list_all_matches=True)
                )
            )
            .set_name("TO.N")
            .set_parse_action(self.make_unpack_callback(TO_N))
        )

    @pp.cached_property
    def _to_p(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".P")
                + self.comma
                + self.field.set_results_name("refdes")
                + self.comma
                + self.field.set_results_name("number")
                + pp.Opt(self.comma + self.field.set_results_name("function"))
            )
            .set_name("TO.P")
            .set_parse_action(self.make_unpack_callback(TO_P))
        )

    @pp.cached_property
    def _to_c(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".C")
                + self.comma
                + self.field.set_results_name("refdes")
            )
            .set_name("TO.C")
            .set_parse_action(self.make_unpack_callback(TO_C))
        )

    @pp.cached_property
    def _to_crot(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CRot")
                + self.comma
                + self.field.set_results_name("angle")
            )
            .set_name("TO.CRot")
            .set_parse_action(self.make_unpack_callback(TO_CRot))
        )

    @pp.cached_property
    def _to_cmfr(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CMfr")
                + self.comma
                + self.field.set_results_name("manufacturer")
            )
            .set_name("TO.CMfr")
            .set_parse_action(self.make_unpack_callback(TO_CMfr))
        )

    @pp.cached_property
    def _to_cmpn(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CMPN")
                + self.comma
                + self.field.set_results_name("part_number")
            )
            .set_name("TO.CMPN")
            .set_parse_action(self.make_unpack_callback(TO_CMNP))
        )

    @pp.cached_property
    def _to_cval(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CVal")
                + self.comma
                + self.field.set_results_name("value")
            )
            .set_name("TO.CVal")
            .set_parse_action(self.make_unpack_callback(TO_CVal))
        )

    @pp.cached_property
    def _to_cmnt(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CMnt")
                + self.comma
                + self.field.set_results_name("mount")
            )
            .set_name("TO.CMnt")
            .set_parse_action(self.make_unpack_callback(TO_CMnt))
        )

    @pp.cached_property
    def _to_cftp(self) -> pp.ParserElement:
        return (
            (
                self._to
                + pp.CaselessLiteral(".CFtp")
                + self.comma
                + self.field.set_results_name("footprint")
            )
            .set_name("TO.CFtp")
            .set_parse_action(self.make_unpack_callback(TO_CFtp))
        )
